--- a/.travis.yml
+++ b/.travis.yml
@@ -302,7 +302,7 @@ script:
   - |-
     echo "using $TOOLSET : : $COMPILER : <cxxflags>-std=$CXXSTD ;" > ~/user-config.jam
   - ./b2 libs/gil/test toolset=$TOOLSET
-  - ./b2 libs/gil/io/test toolset=$TOOLSET
+  - ./b2 libs/gil/io/test//simple toolset=$TOOLSET
   - ./b2 libs/gil/toolbox/test toolset=$TOOLSET
 
 notifications:
