--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -79,7 +79,15 @@ install:
 build: off
 
 test_script:
-  - PATH=%ADDPATH%%PATH%
+  - set PATH=%ADDPATH%%PATH%
+  - |-
+    set VCPKG=%APPVEYOR_BUILD_FOLDER%/../vcpkg/installed/%TRIPLET%
+    set CONF=%HOMEDRIVE%%HOMEPATH%/user-config.jam
+    set CHUNK=^<include^>%VCPKG%/include ^<search^>%VCPKG%/lib
+    echo using zlib : : %CHUNK% ; > %CONF%
+    echo using libjpeg : : %CHUNK% ; >> %CONF%
+    echo using libpng : : ^<name^>libpng16 %CHUNK% ; >> %CONF%
+    echo using libtiff : : %CHUNK% ; >> %CONF%
   - b2 address-model=%AM% libs/gil/test toolset=%TOOLSET% %CXXFLAGS%
-  - b2 address-model=%AM% libs/gil/io/test//simple -spng-prefix=%APPVEYOR_BUILD_FOLDER%/../vcpkg/installed/%TRIPLET%  -stiff-prefix=%APPVEYOR_BUILD_FOLDER%/../vcpkg/installed/%TRIPLET% -sjpeg-prefix=%APPVEYOR_BUILD_FOLDER%/../vcpkg/installed/%TRIPLET% -slibpng=libpng16 -szlib=zlib toolset=%TOOLSET% %CXXFLAGS%
+  - b2 address-model=%AM% libs/gil/io/test//simple toolset=%TOOLSET% %CXXFLAGS%
   - b2 address-model=%AM% libs/gil/toolbox/test toolset=%TOOLSET% %CXXFLAGS%
