Add vcpkg bin folder to PATH (#45)
Fix GIL IO tests issue with dependency DLLs not found.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -72,7 +72,7 @@ install:
 build: off
 
 test_script:
-  - set PATH=%ADDPATH%%PATH%
+  - set PATH=c:\Tools\vcpkg\installed\%TRIPLET%\bin;%PATH%
   - set I=C:\Tools\vcpkg\installed\%TRIPLET%\include
   - set L=C:\Tools\vcpkg\installed\%TRIPLET%\lib
   - set LIBPNG_NAME=libpng16
