--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ indent_style = space
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{.travis.yml,.appveyor.yml,Vagrantfile}]
+[*.yml]
 indent_size = 2
 indent_style = space
 trim_trailing_whitespace = true
