Add CMake option GIL_ENABLE_IO (default=ON)
Allow to enable/disable building of IO tests and examples
which depend on thirdparty libraries (libjpeg,libpng,libtiff).

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -34,7 +34,13 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
-        { "name": "GIL_USE_CONAN", "value": "ON" }
+        {
+          "name": "GIL_USE_CONAN",
+          "value": "ON"
+        },
+        {
+          "name": "GIL_ENABLE_IO", "value": "OFF"
+        }
       ]
     },
     {
