--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,12 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 #
 cmake_minimum_required(VERSION 3.5.1)
-project(GIL CXX)
+project(Boost.GIL CXX)
 
 include(CMakeDependentOption)
 option(GIL_BUILD_TESTS "Build GIL tests" ON)
 option(GIL_BUILD_EXAMPLES "Build GIL examples" OFF) # FIXME: Switch to ON after https://github.com/boostorg/gil/issues/40
+option(GIL_ENABLE_IO "Enable GIL IO in tests and examples (require libjpeg, libpng, libtiff)" ON)
 option(GIL_USE_BOOST_STAGE "Use Boost from current source tree and libraries from stage, unless BOOST_ROOT specified." ON)
 option(GIL_USE_CONAN "Use Conan to install dependencies" OFF)
 
@@ -51,28 +52,30 @@ include_directories(include)
 #-----------------------------------------------------------------------------
 # Dependency: libpng, libjpeg, libtiff via Vcpkg or Conan
 #-----------------------------------------------------------------------------
-if(GIL_USE_CONAN)
-  # Download automatically, you can also just copy the conan.cmake file
-  if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
-    message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
-    file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/v0.9/conan.cmake"
-      "${CMAKE_BINARY_DIR}/conan.cmake")
+if (GIL_ENABLE_IO)
+  if(GIL_USE_CONAN)
+    # Download automatically, you can also just copy the conan.cmake file
+    if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+      message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+      file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/v0.9/conan.cmake"
+        "${CMAKE_BINARY_DIR}/conan.cmake")
+    endif()
+
+    # NOTE: See RelWithDebInfo for Release builds, http://docs.conan.io/en/latest/howtos/vs2017_cmake.html
+    set(_build_type_saved ${CMAKE_BUILD_TYPE})
+    if(CMAKE_BUILD_TYPE STREQUAL "MinSizeRel" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+      set(CMAKE_BUILD_TYPE "Release")
+    endif()
+
+    include(${CMAKE_BINARY_DIR}/conan.cmake)
+    conan_cmake_run(CONANFILE conanfile.txt BASIC_SETUP CMAKE_TARGETS)
+
+    set(CMAKE_BUILD_TYPE ${_build_type_saved})
+  else()
+    find_package(JPEG)
+    find_package(PNG)
+    find_package(TIFF)
   endif()
-
-  # NOTE: See RelWithDebInfo for Release builds, http://docs.conan.io/en/latest/howtos/vs2017_cmake.html
-  set(_build_type_saved ${CMAKE_BUILD_TYPE})
-  if(CMAKE_BUILD_TYPE STREQUAL "MinSizeRel" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
-    set(CMAKE_BUILD_TYPE "Release")
-  endif()
-
-  include(${CMAKE_BINARY_DIR}/conan.cmake)
-  conan_cmake_run(CONANFILE conanfile.txt BASIC_SETUP CMAKE_TARGETS)
-
-  set(CMAKE_BUILD_TYPE ${_build_type_saved})
-else()
-  find_package(JPEG)
-  find_package(PNG)
-  find_package(TIFF)
 endif()
 
 #-----------------------------------------------------------------------------
@@ -98,9 +101,12 @@ endif()
 # Tests
 #-----------------------------------------------------------------------------
 if(GIL_BUILD_TESTS)
+  message(STATUS "Configuring Boost.GIL tests")
   enable_testing()
   add_subdirectory(test)
-  add_subdirectory(io/test)
+  if (GIL_ENABLE_IO)
+    add_subdirectory(io/test)
+  endif()
   add_subdirectory(numeric/test)
   add_subdirectory(toolbox/test)
 endif()
@@ -108,6 +114,6 @@ endif()
 #-----------------------------------------------------------------------------
 # Examples
 #-----------------------------------------------------------------------------
-if(GIL_BUILD_EXAMPLES)
+if(GIL_BUILD_EXAMPLES AND GIL_ENABLE_IO)
   add_subdirectory(example)
 endif()
