--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,3 +1,5 @@
+# AppVeyor for Boost.GIL
+#
 # Copyright 2016, 2017 Peter Dimov
 # Copyright 2018 Mateusz Loskot <mateusz at loskot dot net>
 # Distributed under the Boost Software License, Version 1.0.
