[circleci] Run build workflow for develop branch only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -482,6 +482,9 @@ workflows:
   build-and-test:
     jobs:
       - bootstrap_checkout
+          filters:
+            branches:
+              only: develop
       - bootstrap_gcc:
           requires:
             - bootstrap_checkout
