[circleci] Configure notifications to Gitter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -624,3 +624,10 @@ workflows:
       - clang50_11_core_speed:
           requires:
             - clang50_11_core
+
+##############################################################################
+# Notifications
+##############################################################################
+notify:
+  webhooks:
+    - url: https://webhooks.gitter.im/e/9538066016dc0f9b6511
