--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,6 +7,8 @@
 #
 version: 1.0.{build}-{branch}
 
+# Current Boost.GIL develop branch (future Boost 1.68) requires C++11
+# Since VS2017, MSVC default is /std:c++14, so no explicit switch is required.
 image: Visual Studio 2017
 
 platform: x64
