--- a/numeric/test/CMakeLists.txt
+++ b/numeric/test/CMakeLists.txt
@@ -6,9 +6,20 @@
 # (See accompanying file LICENSE_1_0.txt or copy at
 # http://www.boost.org/LICENSE_1_0.txt)
 #
+message(STATUS "Configuring Boost.GIL Numeric tests")
+
+file(GLOB _headers
+  ${PROJECT_SOURCE_DIR}/include/boost/gil/extension/numeric/*.hpp)
+list(APPEND _headers ${_boost_gil_headers})
+
 add_executable(gil_test_ext_numeric test.cpp numeric.cpp)
+target_sources(gil_test_ext_numeric
+  PRIVATE
+  ${_headers}
+  test.cpp
+  numeric.cpp)
 target_link_libraries(gil_test_ext_numeric
-    PRIVATE
-    Boost::disable_autolinking
-    Boost::unit_test_framework)
+  PRIVATE
+  Boost::disable_autolinking
+  Boost::unit_test_framework)
 add_test(gil.tests.ext.numeric gil_test_ext_numeric)
